--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   line-height: 1.5;
   text-align: center;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 0;
@@ -169,4 +170,25 @@ input{
   height: 100px;
   margin-top: 20px;
   text-align: center;
+}
+
+.footer{
+  grid-area: footer; 
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  align-items: center;
+  font-size: 26px;
+  font-family: "Rubik", sans-serif;
+  font-style:initial;
+  margin-top: 10px;
+  background-color: #f8f4e5;
+  opacity: 70%;
+  border-radius: 50px;
+  padding: 10px 30px;
+  margin-bottom: 20px;
+  text-decoration: none;
+}
+.footer:hover{
+  opacity: 200%; 
 }
